modified:   main.aux 	modified:   main.blg 	modified:   main.fdb_latexmk 	modified:   main.fls 	modified:   main.log 	modified:   main.pdf 	modified:   main.synctex.gz 	modified:   main.tex 	modified:   main.toc 	modified:   newcommand.tex

--- a/newcommand.tex
+++ b/newcommand.tex
@@ -2,4 +2,5 @@
 \newcommand{\mean}[2]{\frac{#1_1 + #1_2 + \cdots + #1_#2}{#2}}
 \newcommand{\mylim}[2]{\lim_{#1 \to \infty } #2}
 \newcommand{\mylinelim}[2]{\lim\limits_{#1 \to \infty} #2}
-\newcommand{\collect}[1]{\left\{ #1\right \}}
+\newcommand{\collect}[1]{\left\{ #1\right\}}
+\newcommand{\funclim}[3]{\lim_{#1 \to #2 } #3}
