--- a/main.tex
+++ b/main.tex
@@ -819,4 +819,93 @@ $O(x_0, \rho) \backslash \collect{x_0}$称为去心邻域。
 \begin{proof}
     
 \end{proof}
+
+% 陈老视频25
+\section{函数极限和数列极限的关系}
+\begin{theorem}[否定命题的分析表示]
+    $\collect{x_n}$以$a$为极限: $\forall \epsilon > 0$, $\exists N$, $\forall n > N$, $\left| x_n - a \right| < \epsilon$。
+
+    $\collect{x_n}$不以$a$为极限: $\exists \epsilon > 0$, $\forall N$, $\exists n > N$, $\left| x_n - a \right| \ge \epsilon$
+\end{theorem}
+\begin{theorem}[heine定理]
+    $\funclim{x}{x_0}{f(x)} = A$存在的充分必要条件是: 对于任意的满足$x_n \neq x_0$, $\mylim{n}{x_n} = x_0$的数列$\collect{x_n}$, $\collect{f(x_n)}$收敛于A。
+\end{theorem}
+\begin{proof}
+    {\bf 证明必要性}, 即证明: 
+    
+    若$\funclim{x}{x_0}{f(x)} = A$, 则对于任意的满足$x_n \neq x_0$, $\mylim{n}{x_n} = x_0$的数列$\collect{x_n}$, $\collect{f(x_n)}$收敛于A。
+
+    因为$\funclim{x}{x_0}{f(x)} = A$, 则$\forall \epsilon > 0$, $\exists \delta > 0$, $\forall x ( 0 < \left| x - x_0 \right| < \delta)$, 成立$\left| f(x) - A \right| < \epsilon$。
+
+    又因为对于$\collect{x_n}$, 有$x_n \neq x_0$且$\mylim{n}{x_n} = 0$, 即$\forall \delta > 0$, $\exists N \in \mathbb{N}^+$, $\forall n > N$, 成立$0 < \left| x_n - x_0 \right| < \delta$。
+
+    则$\forall \epsilon > 0$, $\exists \delta > 0$, 对于该$\delta$, $\exists N \in \mathbb{N}^+$, $\forall n > N$, 有$0 < \left| x_n - x_0 \right| < \delta$, 且在该$\delta$下有$\left| f(x_n) - A \right| < \epsilon$。证明完毕。
+
+    {\bf 证明充分性}, 即证明:
+    
+    若对于任意的满足$x_n \neq x_0$, $\mylim{n}{x_n} = x_0$的数列$\collect{x_n}$, $\collect{f(x_n)}$收敛于A, 则$\funclim{x}{x_0}{f(x)} = A$。
+
+    利用反证法, 若$\funclim{x}{x_0}{f(x)} \neq A$, 则$\exists \epsilon_0 > 0$, $\forall \delta > 0$, $\exists x ( 0 < \left| x - x_0 \right| < \delta)$, 使得$\left| f(x) - A \right| \ge \epsilon_0$
+
+    取$\delta_n = \frac{1}{n}, n = 1, 2, 3, \cdots$,则对于$\epsilon_0$,有:
+    \begin{gather*}
+        \exists x_1(0 < \left| x_1 -x_0 \right| < 1), \left| f(x_1) - A \right| \ge \epsilon_0 \\
+        \exists x_2(0 < \left| x_2 -x_0 \right| < \frac{1}{2}), \left| f(x_2) - A \right| \ge \epsilon_0 \\
+        \exists x_3(0 < \left| x_3 -x_0 \right| < \frac{1}{3}), \left| f(x_3) - A \right| \ge \epsilon_0 \\
+        \cdots \cdots
+    \end{gather*}
+    对于数列$\collect{x_n}$, 对于$\epsilon_0$, $\forall n$, $\left| x_n - x_0\right| > \epsilon_0$恒成立。
+
+    即: $\exists \epsilon = \epsilon_0 > 0$, $\forall N \in \mathbb{N}^+$, $\exists n > N$, $\left| f(x_n) - A\right| > \epsilon$。
+    则存在数列$\collect{x_n}$不收敛于A。这与条件矛盾, 则假设不成立。证明完毕。
+
+\end{proof}
+
+\begin{proposition}
+    $f(x) = \sin \frac{1}{x}$在$x_0 = 0$处极限不存在。
+\end{proposition}
+\begin{proof}
+    
+\end{proof}
+
+\begin{lemma}
+    $\funclim{x}{x_0}{f(x)}$存在并且有限(收敛)的充分必要条件是: 对任意满足$x_n \neq x_0$, $\mylim{n}{x_n}$的$\collect{x_n}$, $\collect{f(x_n)}$收敛。
+\end{lemma}
+\begin{proof}
+    
+\end{proof}
+
+\section{单侧极限}
+\begin{definition}
+    假设$f(x)$在$(x_0 - \rho, x_0)$有定义, 如果存在B, $\forall \epsilon > 0$, $\exists \delta > 0$, $\forall x(-\delta < x-x_0 < 0)$, 成立$\left| f(x) - B\right| < \epsilon$, 则称B是$f(x)$在$x_0$的左极限, 记为$\funclim{x}{x_0^-}{f(x)} = B(f(x)\to B(x \to x_0^-))$。
+
+    类似地, 假如存在C, $\exists \epsilon > 0$, $\exists \delta > 0$, $\forall x(0 < x - x_0 < \delta )$, 成立$\left| f(x) - C \right| < \epsilon$, 则称C是$f(x)$在$x_0$的右极限, 记为$\funclim{x}{x_0^+}{f(x)} = C(f(x)\to C(x \to x_0^+))$。
+
+    则$\funclim{x}{x_0}{f(x)} = A \Leftrightarrow \funclim{x}{x_0^-}{f(x)} = \funclim{x}{x_0^+}{f(x)} = A$
+\end{definition}
+
+\begin{proposition}
+    \begin{equation*}
+        \mathbf{sign} (x) = \left\{ 
+            \begin{aligned}
+                -1 \quad x < 0 \\
+                0 \quad x = 0 \\
+                1 \quad x > 0 
+            \end{aligned}
+        \right.
+    \end{equation*}
+\end{proposition}
+\begin{proof}
+    
+\end{proof}
+\begin{proposition}
+    \begin{equation*}
+        f(x) = \left\{
+            \begin{aligned}
+               \frac{\sin 2x}{x} \quad x < 0 \\
+               2\cos(x^2) \quad x \ge 0 
+            \end{aligned}
+        \right.
+    \end{equation*}
+\end{proposition}
 \end{document}
